# Fake-News-Detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_labeled_news.csv
src/fake_news_detector/: __init__.py  cli.py  data_collection.py  model.py  pipeline.py  preprocessing.py
